[project]
name = "predicategenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "tyro>=1.0.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.5",
]
